# nethz-site

./: Pipfile  README.md  app.py  config.py  pyproject.toml  run.py  test.py  utility.py
app/: __init__.py
app/main/: __init__.py  views.py
app/worldle/: __init__.py  utils.py  views.py
static/css/: animation.css  base.css  errors.css
static/js/: themeSwitch.js
static/worldle/: countries.csv
templates/: base.html  footer.html  navbar.html
templates/components/: _base.html  _footer.html  _navbar.html
templates/dependencies/: _bootstrap.html  _google_fonts.html
templates/macros/: cards.html  regions.html
templates/main/: errors.html  home.html
templates/technische_mechanik/: TM_HS23.html
templates/worldle/: areas.html  capital.html  capitals.html  home.html  languages.html
worldle/: __init__.py  views.py
